removing image that doesnt have an asset

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <script async src="https://api.beta.glia.com/salemove_integration.js"></script>
-  <title>CE Testing Site</title>
+  <title>Cam's Testing Site</title>
   <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     <style>
     h1  {color:#7C19DD;}
@@ -15,10 +15,6 @@
   </head>
 
   <body>
-    <center>
-      <img src="images/Full LOGO_black.png" alt="CE logo" style="width:750px">
-    </center>
-
     <h1 style="text-align:center;">Welcome to our testing site!</h2>
   </body>
 </html>
