--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
 
   <body>
     <h1 style="text-align:center;">Welcome to our testing site!</h2>
+      <p><a href="testPage.html">HTML Images</a></p>
   </body>
 </html>
