added 'Glia button'

--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
   <body>
     <h1 style="text-align:center;">Welcome to our testing site!</h2>
       <p><a href="testPage.html">HTML Images</a></p>
+      <button id="glia-button">Glia button</button>
   </body>
 </html>
