change to <p> content

--- a/index.html
+++ b/index.html
@@ -7,16 +7,13 @@
     <style>
     h1  {color:#7C19DD;}
     h1  {font-family:roboto;}
-    img {
-      width:50%;
-    }
     </style>
 
   </head>
 
   <body>
     <h1 style="text-align:center;">Welcome to our testing site!</h2>
-      <p><a href="testPage.html">HTML Images</a></p>
+      <p><a href="testPage.html">Testpage Link</a></p>
       <button id="glia-button">Glia button</button>
   </body>
 </html>
