--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
   <body>
     <h1 style="text-align:center;">Welcome to our testing site!</h2>
       <p><a href="testPage.html">Testpage Link</a></p>
-      <button id="glia-button">Glia button</button>
+      <div id="glia-button">Glia button</div>
   </body>
 </html>
